added service locator; cleaned up comments